# rest-rust

./: Cargo.toml  README.md
migrations/2020-06-19-045101_create_posts/: up.sql
migrations/2020-06-19-045202_create_users/: up.sql
migrations/2020-06-19-045256_create_follows/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/app/: posts.rs  users.rs
src/domain/: mod.rs
src/domain/follows/models/: mod.rs
src/domain/posts/models/: mod.rs
src/domain/users/: mod.rs
src/domain/users/commands/: get_users.rs  mod.rs
src/domain/users/models/: mod.rs
src/domain/users/queries/: all_users.rs  get_user.rs
src/handlers/: posts.rs  users.rs
src/model/: follow.rs  post.rs  user.rs
