[package]
name = "rest-rust"
version = "0.1.0"
authors = ["Yuma Ishikawa <yuma.fuu05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
